--- a/src/styles/global/text.sass
+++ b/src/styles/global/text.sass
@@ -3,21 +3,21 @@ $bmt: rgba(0, 0, 0, .69)
 $btt: rgba(0, 0, 0, .54)
 
 h1, h2
-  color: $bst
+  color: $bst !important
 
 h3,h4,h5,h6,input,select,textarea, figcaption
-  color: $bmt
+  color: $bmt !important
 
 p, div, span
-  color: $btt
+  color: $btt !important
 
 h1
-  font-size: 1.4em
+  font-size: 1.4em !important
 h2
-  font-size: 1.2em
+  font-size: 1.2em !important
 
 h3,h4,h5,h6,figcaption
-  font-size: 1.1em
+  font-size: 1.1em !important
 
 input, select, textarea
-  font-size: 1em
+  font-size: 1em !important
