--- a/src/styles/global/text.sass
+++ b/src/styles/global/text.sass
@@ -19,5 +19,8 @@ h2
 h3,h4,h5,h6,figcaption
   font-size: 1.1em !important
 
-input, select, textarea
-  font-size: 1em !important
+input, select, textarea, span
+  font-size: 1rem !important
+
+.pre
+  text-indent: 2em
